--- a/css/common.css
+++ b/css/common.css
@@ -540,6 +540,12 @@ header {
   background-color: rgba(212, 212, 212, 0.226);
 }
 
+h1{
+  text-align: center;
+  margin-bottom: 5%;
+  padding-top: 6%;
+}
+
 h2 {
   text-align: center;
   margin-bottom: 5%;
